# Apogee

./: Cargo.toml  README.md  guest.wat
adapters/: wasi_snapshot_preview1.wasm
apogee/: config.toml
apogee/guest/: guest.component.wasm  service.toml
apogee/guest/data/: index.html
crates/bindings/: Cargo.toml
crates/bindings/src/: filesystem_bindings.rs  http_bindings.rs  lib.rs
crates/bindings/wit/: filesystem.wit  http_service.wit
crates/guest/: Cargo.toml
crates/guest/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: cli.rs  config.rs  ctx.rs  filesystem.rs  main.rs  service.rs  wasi.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/service-macros/: Cargo.toml
crates/service-macros/src/: lib.rs
crates/wasi/: Cargo.toml
crates/wasi/src/: clocks.rs  filesystem.rs  lib.rs  logging.rs  main.rs  random.rs  tcp.rs
crates/wasi_snapshot_preview1/: Cargo.toml  build.rs  testwasi.wit
crates/wasi_snapshot_preview1/src/: lib.rs
wasm/: guest.wasm  guest_component.wasm
