[workspace]

members = [
    "crates/guest",
    "crates/host",
    "crates/service-macros",
    "crates/bindings",
    "crates/wasi_snapshot_preview1",
]

[workspace.dependencies]
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", version = '0.3.0', default-features = false }
#wit-bindgen-guest-rust = {git = "https://github.com/bytecodealliance/wit-bindgen"}
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime" }
wit-bindgen-host-wasmtime-rust = { git = "https://github.com/bytecodealliance/wit-bindgen"}
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime" }
hyper = { version = "0.14.20" }