[workspace]

members = [
    "crates/guest",
    "crates/host",
    "crates/service-macros",
    "crates/bindings",
    "crates/wasi",
]

[workspace.dependencies]
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", default-features = false }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime" }
wasmtime-component-macro = { git = "https://github.com/bytecodealliance/wasmtime" }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime" }
hyper = { version = "0.14.20" }