[package]
name = "bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
wit-bindgen-guest-rust = { workspace = true, default-features = false, features = ["macros", "realloc"] }
wasmtime = { workspace = true, optional = true }
hyper = { workspace = true, optional = true, features = ["full"] }

[features]
import = ["wasmtime/component-model", "hyper"]