[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
apogee-sdk = { path = "../sdk", features = [] }

#[package.metadata.wit-component]
#command = "wasm-tools component new ../../target/wasm32-wasi/release/guest.wasm --adapt ../../adapters/wasi_snapshot_preview1.wasm -o ../../apogee/guest/guest.component.wasm --wit ../bindings/wit/filesystem.wit"