[package]
name = "host"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1", features = ["full"] }
wasmtime = { workspace = true, features = ["component-model"]}
sdk = { path = "../sdk", features=["import"] }

wasmtime-wasi-host = { path = "../wasi" }