[package]
name = "apogee-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apogee-macros = { path = "../service-macros" }
apogee-bindings = { path = "../bindings" }


[features]
import = ["apogee-bindings/import"]